Amelioration first + ajout affichage plateau